force-app/main/default/objects/Target__c/Target__c.object-meta.xml
<CustomObject>
    <label>Target</label>
    <pluralLabel>Targets</pluralLabel>
    <nameField>
        <displayFormat>TGT-{0000}</displayFormat>
        <label>Target No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>