force-app/main/default/objects/Target__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Targets</relationshipLabel>
    <relationshipName>Targets</relationshipName>
</CustomField>