force-app/main/default/objects/Target__c/fields/Actual_Value__c.field-meta.xml
<CustomField>
    <fullName>Actual_Value__c</fullName>
    <label>Actual Value</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>