force-app/main/default/objects/Target__c/fields/Auto_Increment_Pct__c.field-meta.xml
<CustomField>
    <fullName>Auto_Increment_Pct__c</fullName>
    <label>Auto-Increment %</label>
    <type>Percent</type>
    <precision>7</precision>
    <scale>3</scale>
</CustomField>