force-app/main/default/objects/Target__c/fields/Brand_Alias__c.field-meta.xml
<CustomField>
    <fullName>Brand_Alias__c</fullName>
    <label>Brand Alias</label>
    <description>Product-hierarchy value when the target is set at Brand Alias level (BRD 13).</description>
    <length>120</length>
    <type>Text</type>
</CustomField>