force-app/main/default/objects/Target__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Monthly</fullName><default>false</default><label>Monthly</label></value>
            <value><fullName>JC</fullName><default>false</default><label>JC</label></value>
            <value><fullName>Quarterly</fullName><default>false</default><label>Quarterly</label></value>
            <value><fullName>Yearly</fullName><default>false</default><label>Yearly</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>