force-app/main/default/objects/Target__c/fields/Full_Day_Target__c.field-meta.xml
<CustomField>
    <fullName>Full_Day_Target__c</fullName>
    <label>Full Day Target</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>