force-app/main/default/objects/Target__c/fields/Increment_Basis__c.field-meta.xml
<CustomField>
    <fullName>Increment_Basis__c</fullName>
    <label>Increment Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Last JC Target</fullName><default>false</default><label>Last JC Target</label></value>
            <value><fullName>Last JC Actual</fullName><default>false</default><label>Last JC Actual</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>