force-app/main/default/objects/Target__c/fields/Increment_Config_Level__c.field-meta.xml
<CustomField>
    <fullName>Increment_Config_Level__c</fullName>
    <label>Increment Config Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>State</fullName><default>false</default><label>State</label></value>
            <value><fullName>Outlet Type</fullName><default>false</default><label>Outlet Type</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>