force-app/main/default/objects/Target__c/fields/Increment_Percent__c.field-meta.xml
<CustomField>
    <fullName>Increment_Percent__c</fullName>
    <label>Increment Percent</label>
    <type>Percent</type>
    <precision>8</precision>
    <scale>3</scale>
</CustomField>