force-app/main/default/objects/Target__c/fields/JC__c.field-meta.xml
<CustomField>
    <fullName>JC__c</fullName>
    <label>Journey Cycle</label>
    <type>Text</type>
    <length>20</length>
</CustomField>