force-app/main/default/objects/Target__c/fields/KPI__c.field-meta.xml
<CustomField>
    <fullName>KPI__c</fullName>
    <label>KPI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Sales Value</fullName>
                </value>
                <value>
                    <fullName>Lines Per Call</fullName>
                </value>
                <value>
                    <fullName>Unique Productive Calls</fullName>
                </value>
                <value>
                    <fullName>Unique Total Calls</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>