force-app/main/default/objects/Target__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Lookup</type>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Targets</relationshipLabel>
    <relationshipName>Targets</relationshipName>
</CustomField>