force-app/main/default/objects/Target__c/fields/Sub_Brand__c.field-meta.xml
<CustomField>
    <fullName>Sub_Brand__c</fullName>
    <label>Sub Brand</label>
    <description>Product-hierarchy value when the target is set at Sub Brand level (BRD 13).</description>
    <length>120</length>
    <type>Text</type>
</CustomField>