force-app/main/default/objects/Target__c/fields/Target_Product_Level__c.field-meta.xml
<CustomField>
    <fullName>Target_Product_Level__c</fullName>
    <label>Target Product Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Brand</fullName><default>false</default><label>Brand</label></value>
            <value><fullName>Sub Brand</fullName><default>false</default><label>Sub Brand</label></value>
            <value><fullName>Brand Alias</fullName><default>false</default><label>Brand Alias</label></value>
            <value><fullName>SKU</fullName><default>false</default><label>SKU</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>